--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -6,8 +6,7 @@
       "name": "Data_Preprocessing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNKuZsGunmdeDLQXZrgW33h"
+      "authorship_tag": "ABX9TyP1SF7ABWLjm46xG3hyaYp3"
     },
     "kernelspec": {
       "name": "python3",
@@ -1082,6 +1081,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QUlmhy0GPXXH"
+      },
+      "source": [
+        "Reward matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oI8XZBJLPWYb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "t4G7VixwubZe"
       },
       "source": [
@@ -1095,7 +1114,7 @@
       },
       "source": [
         "Notes\r\n",
-        "* Possibly add in \"remission\" as a state (i.e. no treatment)\r\n",
+        "* Add in \"remission\" as a state (i.e. no treatment)\r\n",
         "  - Calculate similar to probability of death: probability that a no-treatment period follows a treatment\r\n",
         "  - Then need to calculate probability each prob following \"remission\":\r\n",
         "    - Death\r\n",
@@ -1103,9 +1122,16 @@
         "    - More treatment i.e. \"progression/recurrence\" \r\n",
         "  - If do this, no-treatment (\"[]\") will not be in the action set\r\n",
         "\r\n",
-        "* \"grid world\" verion of action space\r\n",
+        "* \"Grid world\" verion of action space\r\n",
         "  - 56 dimensional object with up to 5 drugs activated at once\r\n",
-        "  - \\> 4mm possible combinations, only 127 drug combos in data - is this necessary? "
+        "  - \\> 4mm possible combinations, only 127 drug combos in data - is this necessary? \r\n",
+        "\r\n",
+        "* Rewards\r\n",
+        "  - I think in the final version this should be a probability distribution returning a number of days of survival/until treatment failure after each action\r\n",
+        "  - For starters, just try to get the average days survived when therapy doesn't result in death.\r\n",
+        "  - Also need to think of something for when patients don't die\r\n",
+        "    - Maybe just probability of death and a final non-death stop state?\r\n",
+        "    - Death vs. no death in the end doesn't matter unless the no deaths get a final reward"
       ]
     },
     {
