--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -6,7 +6,7 @@
       "name": "Data_Preprocessing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1SF7ABWLjm46xG3hyaYp3"
+      "authorship_tag": "ABX9TyMx6QBAV1W2KXm5FhRO7qUo"
     },
     "kernelspec": {
       "name": "python3",
@@ -35,7 +35,7 @@
         "from functools import reduce\r\n",
         "import itertools"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "drugs = pd.read_csv('https://raw.githubusercontent.com/bmurphy1993/Cancer_Reinforcement_Learning/main/Data/DrugCorrection1.csv')\r\n",
         "drugs['Correction'] = drugs['Correction'].str.strip()"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "# Drop where therapy start = therapy end\r\n",
         "tcga_ov_3_clean = tcga_ov_3_clean[tcga_ov_3_clean['days_to_drug_therapy_end'] != tcga_ov_3_clean['days_to_drug_therapy_start']] "
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
         "# Notes\r\n",
         "    # One thing to be aware of is that this code drops all values where therapy start and therapy end are equal"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +493,7 @@
         "\r\n",
         "tcga_ov_1_keep"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
         "def get_index_pos(my_list, val):\r\n",
         "    return [i for i, x in enumerate(my_list) if x == val]"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +749,7 @@
         "print(len(combos))\r\n",
         "combos"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,10 +902,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "i1T5dOpFDHsd"
+        "id": "fuspJEgVFPKy"
       },
       "source": [
-        "Intermittant reward matrix for each patient"
+        "Transition matrix"
       ]
     },
     {
@@ -935,7 +935,7 @@
         "\r\n",
         "transitions"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1135,6 +1135,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i1T5dOpFDHsd"
+      },
+      "source": [
+        "Intermittant reward matrix for each patient"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1kse5iCiC84F"
@@ -1155,7 +1164,7 @@
         "\r\n",
         "# tcga_rewards"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1180,7 @@
         "\r\n",
         "# negs"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1183,7 +1192,7 @@
         "# Add in final state for each patient: [time, 'death']\r\n",
         "# Figure out what to do with patients where overall survival is < the end of the last therapy line"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1201,7 +1210,7 @@
         "    \r\n",
         "#     if ..\r\n"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     }
   ]
