updates, restricted, sparse

--- a/Data_Preprocessing_res.ipynb
+++ b/Data_Preprocessing_res.ipynb
@@ -621,8 +621,8 @@
     "tcga_ov_1_keep_d = tcga_ov_1_keep.loc[tcga_ov_1_keep['outcome_overall_survival_censoring'] == 1].reset_index(drop=True)\n",
     "\n",
     "# Save CSVs\n",
-    "tcga_ov_1_keep.to_csv('tcga_ov_1_keep.csv', index=False)\n",
-    "tcga_ov_1_keep_d.to_csv('tcga_ov_1_keep_d.csv', index=False)\n",
+    "# tcga_ov_1_keep.to_csv('tcga_ov_1_keep.csv', index=False)\n",
+    "# tcga_ov_1_keep_d.to_csv('tcga_ov_1_keep_d.csv', index=False)\n",
     "\n",
     "# Show data\n",
     "tcga_ov_1_keep"
@@ -643,92 +643,92 @@
    "source": [
     "############## Fix so that if a wb doesn't already exist it creates one\n",
     "\n",
-    "book = load_workbook('Table_1.xlsx')\n",
-    "book.template = False\n",
+    "# book = load_workbook('Table_1.xlsx')\n",
+    "# book.template = False\n",
     "\n",
-    "writer = pd.ExcelWriter('Table_1.xlsx', engine='openpyxl')\n",
-    "writer.book = book\n",
+    "# writer = pd.ExcelWriter('Table_1.xlsx', engine='openpyxl')\n",
+    "# writer.book = book\n",
     "\n",
-    "##################### All Patients\n",
-    "# Race\n",
-    "try:\n",
-    "    del book['race']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep.stb.freq(['race']).to_excel(writer, sheet_name='race')\n",
+    "# ##################### All Patients\n",
+    "# # Race\n",
+    "# try:\n",
+    "#     del book['race']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep.stb.freq(['race']).to_excel(writer, sheet_name='race')\n",
     "\n",
-    "# Tumor grade\n",
-    "try:\n",
-    "    del book['tumor grade']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep.stb.freq(['tumor_grade']).to_excel(writer, sheet_name='tumor grade')\n",
+    "# # Tumor grade\n",
+    "# try:\n",
+    "#     del book['tumor grade']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep.stb.freq(['tumor_grade']).to_excel(writer, sheet_name='tumor grade')\n",
     "\n",
-    "# Tumor stage\n",
-    "try:\n",
-    "    del book['tumor stage']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep.stb.freq(['tumor_stage']).to_excel(writer, sheet_name='tumor stage')\n",
+    "# # Tumor stage\n",
+    "# try:\n",
+    "#     del book['tumor stage']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep.stb.freq(['tumor_stage']).to_excel(writer, sheet_name='tumor stage')\n",
     "\n",
-    "# Death\n",
-    "try:\n",
-    "    del book['death']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep.stb.freq(['outcome_overall_survival_censoring']).to_excel(writer, sheet_name='death')\n",
-    "# Age\n",
-    "try:\n",
-    "    del book['age']\n",
-    "except:\n",
-    "    pass\n",
-    "pd.DataFrame(tcga_ov_1_keep['age_at_initial_pathologic_diagnosis'].describe()).to_excel(writer, sheet_name='age')\n",
+    "# # Death\n",
+    "# try:\n",
+    "#     del book['death']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep.stb.freq(['outcome_overall_survival_censoring']).to_excel(writer, sheet_name='death')\n",
+    "# # Age\n",
+    "# try:\n",
+    "#     del book['age']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# pd.DataFrame(tcga_ov_1_keep['age_at_initial_pathologic_diagnosis'].describe()).to_excel(writer, sheet_name='age')\n",
     "\n",
-    "# Overall survival\n",
-    "try:\n",
-    "    del book['days survival']\n",
-    "except:\n",
-    "    pass\n",
-    "pd.DataFrame(tcga_ov_1_keep['total_days_overall_survival'].describe()).to_excel(writer, sheet_name='days survival')\n",
+    "# # Overall survival\n",
+    "# try:\n",
+    "#     del book['days survival']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# pd.DataFrame(tcga_ov_1_keep['total_days_overall_survival'].describe()).to_excel(writer, sheet_name='days survival')\n",
     "\n",
-    "##################### Deceased Patients\n",
-    "# Race\n",
-    "try:\n",
-    "    del book['race_d']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep_d.stb.freq(['race']).to_excel(writer, sheet_name='race_d')\n",
+    "# ##################### Deceased Patients\n",
+    "# # Race\n",
+    "# try:\n",
+    "#     del book['race_d']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep_d.stb.freq(['race']).to_excel(writer, sheet_name='race_d')\n",
     "\n",
-    "# Tumor grade\n",
-    "try:\n",
-    "    del book['tumor grade_d']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep_d.stb.freq(['tumor_grade']).to_excel(writer, sheet_name='tumor grade_d')\n",
+    "# # Tumor grade\n",
+    "# try:\n",
+    "#     del book['tumor grade_d']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep_d.stb.freq(['tumor_grade']).to_excel(writer, sheet_name='tumor grade_d')\n",
     "\n",
-    "# Tumor stage\n",
-    "try:\n",
-    "    del book['tumor stage_d']\n",
-    "except:\n",
-    "    pass\n",
-    "tcga_ov_1_keep_d.stb.freq(['tumor_stage']).to_excel(writer, sheet_name='tumor stage_d')\n",
+    "# # Tumor stage\n",
+    "# try:\n",
+    "#     del book['tumor stage_d']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# tcga_ov_1_keep_d.stb.freq(['tumor_stage']).to_excel(writer, sheet_name='tumor stage_d')\n",
     "\n",
-    "# Age\n",
-    "try:\n",
-    "    del book['age_d']\n",
-    "except:\n",
-    "    pass\n",
-    "pd.DataFrame(tcga_ov_1_keep_d['age_at_initial_pathologic_diagnosis'].describe()).to_excel(writer, sheet_name='age_d')\n",
+    "# # Age\n",
+    "# try:\n",
+    "#     del book['age_d']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# pd.DataFrame(tcga_ov_1_keep_d['age_at_initial_pathologic_diagnosis'].describe()).to_excel(writer, sheet_name='age_d')\n",
     "\n",
-    "# Overall survival\n",
-    "try:\n",
-    "    del book['days survival_d']\n",
-    "except:\n",
-    "    pass\n",
-    "pd.DataFrame(tcga_ov_1_keep_d['total_days_overall_survival'].describe()).to_excel(writer, sheet_name='days survival_d')\n",
+    "# # Overall survival\n",
+    "# try:\n",
+    "#     del book['days survival_d']\n",
+    "# except:\n",
+    "#     pass\n",
+    "# pd.DataFrame(tcga_ov_1_keep_d['total_days_overall_survival'].describe()).to_excel(writer, sheet_name='days survival_d')\n",
     "\n",
-    "writer.save()\n",
-    "writer.close()"
+    "# writer.save()\n",
+    "# writer.close()"
    ]
   },
   {
@@ -1773,8 +1773,8 @@
     "df_reg = make_reg_df(lines_df_2)\n",
     "\n",
     "# Save CSVs\n",
-    "df_reg.to_pickle('df_reg.pkl')\n",
-    "df_d_reg.to_pickle('df_d_reg.pkl')\n",
+    "# df_reg.to_pickle('df_reg.pkl')\n",
+    "# df_d_reg.to_pickle('df_d_reg.pkl')\n",
     "\n",
     "# Show data\n",
     "df_reg"
@@ -1842,7 +1842,7 @@
     "    plt.ylabel('Months from start of treatment', size=14)\n",
     "    plt.xticks(size=12, rotation='vertical')\n",
     "    plt.yticks(size=12)\n",
-    "    plt.savefig(file_name)\n",
+    "#     plt.savefig(file_name)\n",
     "\n",
     "freq_heat(df_reg, 'Treatment Frequency and Timing - All Patients', 'heat_data_all.png')\n",
     "freq_heat(df_d_reg, 'Treatment Frequency and Timing - Deceased Patients', 'heat_data_d.png')"
@@ -2164,8 +2164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cph_surv.baseline_survival_.to_csv('cph_surv_baseline.csv', index=False)\n",
-    "cph_treat.baseline_survival_.to_csv('cph_treat_baseline.csv', index=False)"
+    "# cph_surv.baseline_survival_.to_csv('cph_surv_baseline.csv', index=False)\n",
+    "# cph_treat.baseline_survival_.to_csv('cph_treat_baseline.csv', index=False)"
    ]
   },
   {
@@ -2197,7 +2197,7 @@
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
     "\n",
-    "plt.savefig('baseline_surv_death.png')\n",
+    "# plt.savefig('baseline_surv_death.png')\n",
     "\n",
     "# cph.print_summary()\n",
     "# cph_treat.print_summary()"
@@ -2231,7 +2231,7 @@
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
     "\n",
-    "plt.savefig('baseline_surv_recurrence.png')"
+    "# plt.savefig('baseline_surv_recurrence.png')"
    ]
   },
   {
@@ -2447,13 +2447,13 @@
     "START_STATE = 'T'\n",
     "GAMMA = 0.99 # orig 0.99\n",
     "ALPHA = 0.01 # orig 0.01\n",
-    "EPS_START = 0.9 # orig 0.9\n",
+    "EPS_START = 0.90 # orig 0.9\n",
     "EPS_END = 0.05 # orig 0.05\n",
     "EPS_DECAY = 100 # Increase to slow decay. Orig 100\n",
     "BATCH_SIZE = 100 # orig 100\n",
     "TARGET_UPDATE = 10 # orig 10\n",
     "IN_FEATURES = 5 + len(races2)+len(tumor_stages2)+len(tumor_grades2) # health state, months, months on treatment, age, previous lines + dummy arrays\n",
-    "OUT_FEATURES = len(combos_drugs) # Change for restricted vs. full action set ('_res' suffix)\n",
+    "OUT_FEATURES = len(combos_drugs_res) # Change for restricted vs. full action set ('_res' suffix)\n",
     "\n",
     "policy = DQN_3(IN_FEATURES, OUT_FEATURES).to(device)\n",
     "target_net = DQN_3(IN_FEATURES, OUT_FEATURES).to(device)\n",
@@ -2514,7 +2514,7 @@
     "        self.treat_mo = 0\n",
     "        self.prev_lines = 0\n",
     "        self.round = 0\n",
-    "        self.actions = combos_drugs # Change for restricted vs. full action set ('_res' suffix)\n",
+    "        self.actions = combos_drugs_res # Change for restricted vs. full action set ('_res' suffix)\n",
     "        # initial state and action reward\n",
     "        self.state_values = {'N':1, 'T':1, 'D':-1}       # not sure if need these, need action values instead. Can it be like: Combo: Value - xt?\n",
     "        self.statevals_list = [1, 1, -1]      # for [N, T, D]\n",
@@ -2776,7 +2776,7 @@
     "plt.ylabel('Months Survival', fontsize=14)\n",
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
-    "plt.savefig('reward.png')"
+    "# plt.savefig('reward.png')"
    ]
   },
   {
@@ -2943,7 +2943,7 @@
     "reward_df['CMA'] = reward_df.iloc[:,0].expanding(min_periods=2).mean()\n",
     "reward_df['EMA100'] = reward_df.iloc[:,0].ewm(span=100, adjust=False).mean()\n",
     "# Save CSV\n",
-    "reward_df.to_csv('reward_df.csv', index=False)\n",
+    "reward_df.to_csv('reward_df_res.csv', index=False)\n",
     "# Show\n",
     "reward_df"
    ]
@@ -2979,7 +2979,7 @@
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
     "plt.legend()\n",
-    "plt.savefig('sim_survival.png')"
+    "# plt.savefig('sim_survival.png')"
    ]
   },
   {
@@ -3527,7 +3527,7 @@
    ],
    "source": [
     "# Save CSV\n",
-    "sim_trajectories.to_csv('sim_trajectories.csv', index=False)\n",
+    "sim_trajectories.to_csv('sim_trajectories_res.csv', index=False)\n",
     "\n",
     "# Show\n",
     "sim_trajectories.head(30)"
@@ -3567,7 +3567,7 @@
     "plt.ylabel('Months Survived', fontsize=12)\n",
     "plt.xticks(fontsize=10)\n",
     "plt.yticks(fontsize=10)\n",
-    "plt.savefig('policy_val.png')"
+    "# plt.savefig('policy_val.png')"
    ]
   },
   {
@@ -3598,7 +3598,7 @@
     "\n",
     "sim_last1000['ther_str'] = [','.join(map(str, l)) for l in sim_last1000['therapy']]\n",
     "\n",
-    "sim_last1000.to_pickle('sim_last1000.pkl')\n",
+    "sim_last1000.to_pickle('sim_last1000_res.pkl')\n",
     "\n",
     "freq_heat(sim_last1000, 'Treatment Frequency and Timing - AI Policy', 'heat_data_ai.png')"
    ]
