nccn, random, figs, small updates

--- a/Data_Preprocessing_sparse.ipynb
+++ b/Data_Preprocessing_sparse.ipynb
@@ -2011,7 +2011,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Static transition matrix"
+    "Variable weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Full\n",
+    "pat_vars = lines_df_2.drop_duplicates('patient')[['race', 'tumor_stage', 'tumor_grade']].reset_index(drop=True)\n",
+    "    # race\n",
+    "race_weights_full = list(pat_vars.groupby('race').count().reset_index()['tumor_stage'])\n",
+    "race_weights_full = [weight / len(pat_vars) for weight in race_weights_full]\n",
+    "    # tumor stage\n",
+    "ts_weights_full = list(pat_vars.groupby('tumor_stage').count().reset_index()['race'])\n",
+    "ts_weights_full = [weight / len(pat_vars) for weight in ts_weights_full]\n",
+    "    # tumor grade\n",
+    "tg_weights_full = list(pat_vars.groupby('tumor_grade').count().reset_index()['race'])\n",
+    "tg_weights_full = [weight / len(pat_vars) for weight in tg_weights_full]\n",
+    "\n",
+    "# Deceased only\n",
+    "pat_vars_d = lines_df_d.drop_duplicates('patient')[['race', 'tumor_stage', 'tumor_grade']].reset_index(drop=True)\n",
+    "    # race\n",
+    "race_weights_d = list(pat_vars_d.groupby('race').count().reset_index()['tumor_stage'])\n",
+    "race_weights_d = [weight / len(pat_vars_d) for weight in race_weights_d]\n",
+    "    # tumor stage\n",
+    "ts_weights_d = list(pat_vars_d.groupby('tumor_stage').count().reset_index()['race'])\n",
+    "ts_weights_d = [weight / len(pat_vars_d) for weight in ts_weights_d]\n",
+    "    # tumor grade\n",
+    "tg_weights_d = list(pat_vars_d.groupby('tumor_grade').count().reset_index()['race'])\n",
+    "tg_weights_d = [weight / len(pat_vars_d) for weight in tg_weights_d]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set full or deceased dataset"
    ]
   },
   {
@@ -2041,7 +2079,12 @@
     "tumor_grades2 = tumor_grades_d2\n",
     "\n",
     "# Dataset to use\n",
-    "trans_data = df_d_reg # change to df_reg if using full dataset"
+    "trans_data = df_d_reg # change to df_reg if using full dataset\n",
+    "\n",
+    "# Weights to use\n",
+    "race_weights = race_weights_d\n",
+    "tg_weights = tg_weights_d\n",
+    "ts_weights = ts_weights_d"
    ]
   },
   {
@@ -2489,19 +2532,19 @@
     "    def __init__(self, state=START_STATE):\n",
     "        self.state = state\n",
     "        self.age = round(np.random.normal(trans_data['age'].mean(), trans_data['age'].std(), 1)[0])\n",
-    "        self.race = random.choice(races) # choose from all including 'NOT SPECIFIED'\n",
+    "        self.race = random.choices(races, weights=race_weights)[0] # choose from all including 'NOT SPECIFIED'\n",
     "        self.r_arr = np.zeros(len(races2)) # sim patient vectors = 0 if 'NOT SPECIFIED'\n",
     "        if self.race == 'NOT SPECIFIED':\n",
     "            pass\n",
     "        else:\n",
     "            self.r_arr[races2.index(self.race)] = 1\n",
-    "        self.tumor_stage = random.choice(tumor_stages) \n",
+    "        self.tumor_stage = random.choices(tumor_stages, weights=ts_weights)[0] \n",
     "        self.ts_arr = np.zeros(len(tumor_stages2))\n",
     "        if self.tumor_stage == 'NOT SPECIFIED':\n",
     "            pass\n",
     "        else:\n",
     "            self.ts_arr[tumor_stages2.index(self.tumor_stage)] = 1\n",
-    "        self.tumor_grade = random.choice(tumor_grades)\n",
+    "        self.tumor_grade = random.choices(tumor_grades, weights=tg_weights)[0]\n",
     "        self.tg_arr = np.zeros(len(tumor_grades2))\n",
     "        if self.tumor_grade == 'NOT SPECIFIED':\n",
     "            pass\n",
